--- a/dokumentti/template-fi.tex
+++ b/dokumentti/template-fi.tex
@@ -70,8 +70,8 @@
 % The following commands define the information used to generate title and
 % abstract pages. The following entries should be always specified:
 
-\title{Esimerkkiotsikko}
-\author{Eija Esimerkki}
+\title{OWL-S palvelunmääritysontologia}
+\author{Hansi Keijonen}
 \date{\today}
 \level{Seminaariraportti}
 \abstract{Tiivistelmä.}
@@ -521,25 +521,25 @@ Seuraavassa luetellaan OWL-S:n kontrollirakenteita lyhyiden selostusten kera:
 
 \subsection{Maadoitus}
 
-Palvelun maadoitus (grounding) kertoo kuinka palvelu on saavutettavissa käytännön tasolla. Tärkeimmät maadoitusdokumentin ilmaisemat asiat ovat viestien muoto, viestiprotokollat, sarjallistaminen, osoitteet jne\cite{OWLS}. Voidaan ajatella, että palvelun käytön abstrakti kuvaus MÄPÄTÄÄN  konkreettiselle, käytännön tasolle\cite{OWLS}. 
+Palvelun maadoitus (grounding) kertoo kuinka palvelu on saavutettavissa käytännön tasolla. Tärkeimmät maadoitusdokumentin ilmaisemat asiat ovat viestien muoto, viestiprotokollat, sarjallistaminen ja osoitteet\cite{OWLS}. Voidaan ajatella, että maadoituskuvauksessa palvelun käytön abstrakti kuvaus siirretään  konkreettiselle, käytännön tasolle\cite{OWLS}. 
 
-OWL-S:n maadoituksen tärkein tehtävä on kertoa kuinka atomisten prosessien syötteet ja paluuarvot muutetaan viesteiksi, jotka voidaan kuljettaa jollain menetelmällä, esim. html-protokollan avulla \cite{OWLS}. 
+Maadoituksessa tarvittavat OWLS-konstruktiot on määritelty \textit{Grounding.owl} -tiedostoon, joka tulee tuoda maadoitusdokumentin käyttöön \texttt{owl:import} -lauseella.
 
-%:
-OWL-S nojaa viestien määrittelyssä vahvasti jo olemassa olevaan WSDL -kieleen, jonka puitteissa on tehty paljon kehitystyötä konkreettisen viestinmäärittelyn aikaansaamiseksi. WSDL tulee sanoista Web Services Description Language ja on XML-formaatti web-palveluiden kuvaamiseksi ENDPOINTEINA, jotka käsittelevät viestejä. WSDL:ssä ENDPOINTIT ja viestit määritellään abstraktilla tasolla, mutta MÄPÄTÄÄN konkreettisiksi viestiprotokolliksi ja viestiformaateiksi \cite{WSDL}    
+OWL-S:n maadoituksen tärkein tehtävä on kertoa kuinka atomisten prosessien syötteet ja paluuarvot muutetaan viesteiksi, jotka voidaan kuljettaa jollain menetelmällä, esim. html- tai SOAP-protokollan avulla \cite{OWLS}. 
 
-WSDL:n sopivuus perustuu siihen, että OWL-S:n maadoitus on melko yhdenmukainen WSDL:n \textit{sitomisen} kanssa\cite{OWLS}. Kuitenkin molempia kieliä pitää käyttää toisiaan täydentävästi, koska kumpikaan ei yksinään tarjoa kaikkia ominaisuuksia. 
 
-%\subsubsection{Grounding }
+OWL-S nojaa viestien määrittelyssä vahvasti jo olemassa olevaan WSDL -kieleen, jonka puitteissa on tehty paljon kehitystyötä konkreettisen viestinmäärittelyn aikaansaamiseksi. WSDL tulee sanoista Web Services Description Language ja on XML-formaatti web-palveluiden kuvaamiseksi päätepisteinä, jotka käsittelevät viestejä. WSDL:ssä päätepisteet ja viestit määritellään abstraktilla tasolla, mutta käytännössä kuvataan konkreettisiksi viestiprotokolliksi ja viestiformaateiksi \cite{WSDL}    
 
-Koska maadoituksen tarkoituksena on MÄPÄTÄ abstrakti kuvaus konkreettisiksi viestinkuljetusoperatioiksi, tulee muodostaa ikään kuin silta OWLS-n ja WSDL:n välille. Siltana toimii OWL-S:n maadoitusdokumentti. Siinä kuvataan pääasiassa \texttt{WSDLAtomicProcessGrounding} -ilmentymiä, koska WSDL on useimmiten viestinvaihdon konkreettinen toteutus. Niissä märitellään viitteet OWL-S:n  prosesseista, syötteistä ja paluuarvoista WSDL:n vastaaviin, konkreettisiin määrityksin. 
+WSDL:n sopivuus perustuu siihen, että OWL-S:n maadoitus on melko yhdenmukainen WSDL:n \textit{sitomisen} käsitteen (\textit{bind}) kanssa\cite{OWLS}. Kuitenkin molempia kieliä pitää käyttää toisiaan täydentävästi, koska kumpikaan ei yksinään tarjoa kaikkia tarvittavia ominaisuuksia. 
 
-Seuraavat \texttt{WSDLAtomicProcessGrounding}in ominaisuudet mahdollistavat OWL-S:n konstruktioiden mäppäyksen WSDL:n vastaaviin (vain tärkeimät esitelty):
+Koska maadoituksen tarkoituksena on kuvata abstrakti kuvaus konkreettisiksi viestinkuljetusoperatioiksi, tulee muodostaa ikään kuin silta OWLS-n ja WSDL:n välille. Siltana toimii OWL-S:n maadoitusdokumentti. Siinä kuvataan pääasiassa \texttt{WSDLAtomicProcessGrounding} -ilmentymiä, koska WSDL on useimmiten viestinvaihdon konkreettinen toteutus. Niissä märitellään viitteet OWL-S:n  prosesseista, syötteistä ja paluuarvoista WSDL:n vastaaviin, konkreettisiin määrityksin\cite{OWLS}. 
+
+Seuraavat \texttt{WSDLAtomicProcessGrounding}in ominaisuudet mahdollistavat OWL-S:n konstruktioiden kuvauksen WSDL:n vastaaviin (vain tärkeimät esitelty):
 
 \begin{itemize}
 \item \texttt{wsdlDocument} kertoo käytössä olevan WSDL-dokumentin URIn. Kaikki viittaukset wsdl-määrityksiin viittaavat tähän dokumenttiin. 
 
-\item \texttt{wsdlOperation} viittaa wsdl-dokumentissa määriteltyyn operaatioon, joka vastaa OWL-S:n  atomista prosessia. BravoAir-esimerkissä MÄPÄTÄÄN 
+\item \texttt{wsdlOperation} viittaa wsdl-dokumentissa määriteltyyn operaatioon, joka vastaa OWL-S:n  atomista prosessia. BravoAir-esimerkissä kuvataan
 prosessikuvauksessa oleva \textit{BravoAirProcess.owl\#LogIn} -prosessi WSDL-määrityksen vastaavaan operaatioon \texttt{\#LogIn\_operation}: 
 
 \small
@@ -554,7 +554,7 @@ WSDL:n operaatiomäärityksiä ei voi sisällyttää tähän raporttiin joten ni
 
 \item \texttt{wsdlInputMessage} on olio, johon on talletettu sen  WSDL-määrityksen URI, joka ilmaisee syötteitä kuljettavien viestien muodon.  
 
-\item \texttt{wsdlInput} -oliossa MÄPÄTÄÄN jokainen mäpättävän prosessin syöte WSDL:ssä  määritetyn viestin osaksi. Ideaalitapauksessa jokaista syötettä vastaa yksi WSDL:n viestin osa. Alla olevassa esimerkissä. MÄPÄTÄÄN BravoAirin prosessikuvauksen syöte \texttt{\#LogIn\_AcctName} WSDL-määritykseen  \texttt{\#acctName}. Viittaus jälleen URI:n avulla. 
+\item \texttt{wsdlInput} -oliossa kuvataan jokainen kuvattavan prosessin syöte WSDL:ssä  määritetyn viestin osaksi\cite{OWLS}. Ideaalitapauksessa jokaista syötettä vastaa yksi WSDL:n viestin osa. Alla olevassa esimerkissä kuvataan BravoAirin prosessikuvauksen syöte \texttt{\#LogIn\_AcctName} WSDL-määritykseen  \texttt{\#acctName}. Viittaus jälleen URI:n avulla\cite{daml}. 
 \footnotesize
 \begin{verbatim}
 <grounding:wsdlInput>
@@ -569,12 +569,12 @@ WSDL:n operaatiomäärityksiä ei voi sisällyttää tähän raporttiin joten ni
 \end{verbatim}
 \normalsize
 
-\item \texttt{wsdlOutput} ja \texttt{wsdlOutputMessage} toimivat vastaavasti kuin edelliset, mutta MÄPPÄÄVÄT prosessin paluuarvoja.
+\item \texttt{wsdlOutput} ja \texttt{wsdlOutputMessage} toimivat vastaavasti kuin edelliset, mutta kuvaavat prosessin paluuarvoja.
 \end{itemize}
 
 \section{Pohdintaa}
 
-W3C:n dokumentaatio koskee tällä hetkellä versiota 1.1 ja ainakin dokumentaation mukaan parannuksia on luvassa (ainakin esimerkkidokumentteja löytyy versiolle 1.2.)\cite{OWLS}. 
+W3C:n dokumentaatio koskee tällä hetkellä versiota 1.1 ja ainakin dokumentaation mukaan parannettu versio on luvassa (ainakin esimerkkidokumentteja löytyy versiolle 1.2.)\cite{OWLS}. 
 
 OWL-S on menestynyt parhaiten tiedemaailmassa\cite{with_owls}. Merkittävät arkielämän sovellukset kuitenkin puuttuvat puuttuvat vielä tällä hetkellä. OWL-S:n ongelmia on mm. toimivan poikkeuskäsittelyn puute maadoituksessa\cite{with_owls}: mitä tehdä, jos palvelun suorituksessa kohdataan ongelmia? Tulevaisuuden pyrkimyksenä on kytkeä OWL-S WSDL:n poikkeuskäsittelyyn. Palvelujen laadun ja luotettavuuden varmistaminen ei ole mahdollista OWL-S:llä\cite{with_owls}. Tämä kysymys on ollut esillä siitä lähtien kun semanttisesta webistä on alettu puhua, mutta ratkaisua ei ole vielä löytynyt\cite{semweb}. Myös tehokkaiden parinmuodostusalgoritmien puute on vaivannut automaattisen palvelujen orkestroinnin kehitystä\cite{with_owls}. Suurin ongelma ehkä on kuitenkin, samoin kuin semanttisessa webissä yleensä, soveluusaluekohtaisten ontologioiden puute\cite{with_owls}. Tässä ollaan selvästi klassisen muna vai kana -problematiikan äärellä.    
 
