--- a/dokumentti/template-fi.tex
+++ b/dokumentti/template-fi.tex
@@ -74,11 +74,10 @@
 \author{Hansi Keijonen}
 \date{\today}
 \level{Seminaariraportti}
-\abstract{Tiivistelmä.}
-
+\abstract{Semanttisen webin tekniikat tarjoavat uusia mahdollisuuksia web-palveluiden koostamiseen. Kun web-palvelut kuvataan semantiikoin, ne ovat myös koneen ymmärrettävissä. Tällöin voidaan käyttää automaattisia web-agentteja, jotka etsivät palveluita ja hyödyntävät niitä automaattisesti. Yleinen tapa määritellä semantiikoita on OWL -ontologiat. Ontologiat ovat sanastoja merkitysten kuvaamiseen. OWL-S -ontologia  on sanasto web-palveluiden kuvaamiseen. Sen avulla on mahdollista kuvata kuka palvelun tarjoaa, miten palvelu toimii ja kuinka sitä käytännön tasolla käytetään.}
 % The following can be used to specify keywords and classification of the paper:
 
-\keywords{avainsana 1, avainsana 2, avainsana 3}
+\keywords{semanttinen web, palveluiden koostaminen, OWL-S}
 \classification{} % classification according to ACM Computing Classification System (http://www.acm.org/about/class/)
                   % This is probably mostly relevant for computer scientists
 
